@@ -118,3 +118,9 @@ zone "keytests.nil" {
 	    grant sha512-key name sha512.keytests.nil. ANY;
 	};
 };
+
+zone "sample" {
+	type master;
+	allow-update { any; };
+	file "sample.db";
+};
