@@ -64,4 +64,10 @@ view primary {
 		file "update.bk";
 		allow-transfer { any; };
 	};
+
+	zone "sample" {
+		type master;
+		allow-update { any; };
+		file "sample.db";
+	};
 };
